# OOP_Projects

./: A2_S24_Task2345_B_20230492_20231133_20230792.cpp  Connect_4.h  Headers.h  Implementation.cpp  README.md  file.txt  main.cpp
Assignment 2/Task3/: 4x4_Tic_Tac_Toe.h  5x5X_O.h  5x5_X_O.h  A2_S24_Task2345_B_20230492_20231133_20230792.cpp  A2_S24_Task23_B_20230492_20231133_20230792.cpp  CMakeLists.txt  Connect_4.h  Inverted_X_O.h  Pyramid_Tic_Tac_Toe.h  Ultimate_Tic_Tac_Toe.h  Word_Tic-Tac-Toe.h  numericalTicTacToe.h
OOP_Projects/Task2/: main.cpp
OOP_Projects/Task3/: Pyramid_Tic_Tac_Toe.h
Task 2/: main.cpp
Task1/: file.txt  main.cpp
Task2/: main.cpp
Task3/: A2_S24_Task2345_B_20230492_20231133_20230792.cpp  BoardGame_Classes.h  CMakeLists.txt  Connect_4.h  Inverted_X_O.h  Pyramid_Tic_Tac_Toe.h  README.md  Word_Tic-Tac-Toe.h
