cmake_minimum_required(VERSION 3.29)
project(Task_3)

set(CMAKE_CXX_STANDARD 20)

add_executable(Task_3 A2_S24_Task2345_B_20230492_20231133_20230792.cpp
        BoardGame_Classes.h
        Pyramid_Tic_Tac_Toe.h
        Connect_4.h
        Word_Tic-Tac-Toe.h
        4x4_Tic_Tac_Toe.h
        Ultimate_Tic_Tac_Toe.h
        numericalTicTacToe.h
)
